v0.5.0/_sources/projections/misc/misc_sinusoidal.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/misc/misc_sinusoidal.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_projections_misc_misc_sinusoidal.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_misc_misc_sinusoidal.py:


Sinusoidal
==========

The sinusoidal projection is one of the oldest known projections, is
equal-area, and has been used since the mid-16th century. It has also been
called the "Equal-area Mercator" projection. The central meridian is a straight
line; all other meridians are sinusoidal curves. Parallels are all equally
spaced straight lines, with scale being true along all parallels (and central
meridian).

**i**\ [*lon0/*]\ *scale* or **I**\ [*lon0/*]\ *width*

The projection is set with **i** or **I**. The central meridian is set with the
optional *lon0*, and the figure size is set with *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 17-23



.. image-sg:: /projections/misc/images/sphx_glr_misc_sinusoidal_001.png
   :alt: misc sinusoidal
   :srcset: /projections/misc/images/sphx_glr_misc_sinusoidal_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>






|

.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    # Use region "d" to specify global region (-180/180/-90/90)
    fig.coast(region="d", projection="I12c", land="coral4", water="azure3", frame="afg")
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.956 seconds)


.. _sphx_glr_download_projections_misc_misc_sinusoidal.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: misc_sinusoidal.py <misc_sinusoidal.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: misc_sinusoidal.ipynb <misc_sinusoidal.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
